# lexical-alignment-shifts

./: .gitignore  CITATION.cff  COMMANDS.md  LICENSE  README.md  pyproject.toml
scripts/: analyse_las.py  analyse_tps.py
scripts/alpha-stage/: df_diff_base-instruct.py  get_first_parses.py
